# lwip-py

./: .gitmodules  LICENSE  README.md  pyproject.toml  run-tests.py
liblwip/: CMakeLists.txt  compat.c  compat.h  headers.in.h  lwipcfg.h  lwipopts.h  make_headers.sh
src/lwip/: __init__.py  ffi.py  headers.py  inet.py  lwip_error.py  socket.py  tcpip.py
src/lwip/defs/: __init__.py  err.py  pbuf.py
src/lwip/netif/: __init__.py  driver.py
tests/: test_netif.py  test_routing.py  test_tcp.py  test_udp.py
