[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lwip_py"
version = "0.0.1"
authors = [
  { name="sportelliluciano" },
]
description = "Thin wrapper over lwIP"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
  "cffi"
]

[project.urls]
Homepage = "https://github.com/sportelliluciano/lwip-py"
Issues = "https://github.com/sportelliluciano/lwip-py"
